# atsamd51g-probe-rs

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
