[package]
name = "atsamd51g-defmt"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = { version = "0.7" }
atsamd-hal = { version = "0.17.0", features = [
    "samd51g",
    "samd51g-rt",
    "defmt",
] }


[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = "off"
opt-level = 1

[profile.release]
incremental = false
codegen-units = 1
debug = true
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"
